version/0.19/_sources/api/solver/_autosummary/settings/pressure_outlet.rst.txt
:orphan:

.. _pressure_outlet:

pressure_outlet
===============

.. autoclass:: ansys.fluent.core.solver.settings_241.pressure_outlet.pressure_outlet
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`pressure_outlet_child <pressure_outlet_child>`


.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`boundary_conditions <boundary_conditions>`       'boundary_conditions' child.

================================================   ================================

